Adding new functions and few other fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(ackley_func)
 export(animate_population)
 export(bohachevsky_func)
+export(colville_func)
 export(config_abc)
 export(config_algo)
 export(config_bat)
@@ -20,6 +21,7 @@ export(constrained_function)
 export(constraint)
 export(freudenstein_roth_func)
 export(get_population)
+export(griewank_func)
 export(list_of_algorithms)
 export(list_of_functions)
 export(miele_cantrell_func)
@@ -28,7 +30,6 @@ export(parameter)
 export(parameters)
 export(plot_history)
 export(plot_population)
-export(qing_func)
 export(rastrigin_func)
 export(rosenbrock_func)
 export(schwefel_func)
