--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Evolutionary Minimizer for R
 Version: 1.0.3
 Authors@R: c(
-    person("Davide", "Pagano", email = "davide.pagano@unibs.it", role = c("aut","cre")),
-    person("Lorenzo", "Sostero", email = "l.sostero@studenti.unibs.it", role = "aut"))
+    person("Davide", "Pagano", email = "davide.pagano@unibs.it", role = "aut"),
+    person("Lorenzo", "Sostero", email = "l.sostero@studenti.unibs.it", role = c("aut","cre")))
 Author: Davide Pagano [aut],
   Lorenzo Sostero [aut, cre]
 Maintainer: Lorenzo Sostero <l.sostero@studenti.unibs.it>
