--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(config_hs)
 export(config_ihs)
 export(config_mfo)
 export(config_ps)
+export(config_sa)
 export(config_woa)
 export(constrained_function)
 export(constraint)
@@ -35,6 +36,7 @@ export(schwefel_func)
 export(styblinski_tang_func)
 importFrom(Rcpp,evalCpp)
 importFrom(Rdpack,reprompt)
+importFrom(graphics,plot)
 importFrom(mathjaxr,preview_rd)
 importFrom(methods,new)
 useDynLib(EmiR, .registration=TRUE)
