--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,8 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.5.0)
 Imports: Rcpp (>= 1.0.5), methods, Rdpack, tictoc, ggplot2, tibble, tidyr, dplyr, gganimate, mathjaxr, data.table, plot3D, graphics
-LinkingTo: Rcpp, RcppProgress, testthat
-RoxygenNote: 7.1.2
+LinkingTo: Rcpp, RcppProgress
+RoxygenNote: 7.2.2
 Roxygen: list(markdown = TRUE)
 RdMacros: Rdpack, mathjaxr
 SystemRequirements: C++11
