--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,10 +26,13 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.5.0)
-Imports: Rcpp (>= 1.0.5), methods, Rdpack, tictoc, ggplot2, tibble, tidyr, dplyr, gganimate, mathjaxr, data.table, plot3D, graphics
+Imports: Rcpp (>= 1.0.5), methods, Rdpack, tictoc, ggplot2, tibble,
+        tidyr, dplyr, gganimate, mathjaxr, data.table, plot3D, graphics
 LinkingTo: Rcpp, RcppProgress
-RoxygenNote: 7.2.3
+RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
 RdMacros: Rdpack, mathjaxr
 SystemRequirements: C++11
 Suggests: xml2
+NeedsCompilation: yes
+Packaged: 2022-12-09 16:49:57 UTC; Lorenzo
