--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.5.0)
-Imports: Rcpp (>= 1.0.5), methods, Rdpack, tictoc, ggplot2, tibble, tidyr, dplyr, gganimate, mathjaxr, data.table, plot3D, graphics
+Imports: Rcpp (>= 1.0.5), methods, Rdpack, tictoc, ggplot2, tibble, tidyr, dplyr, gganimate, mathjaxr, data.table, graphics
 LinkingTo: Rcpp, RcppProgress, testthat
 RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
